minor css fix for firefox 3 layout issue
git-svn-id: svn://svn.code.sf.net/p/opendb/code/opendb/trunk@434 2c52d18a-8f90-4aa0-bf14-52c5ce5e299b

--- a/theme/default/item_display.css
+++ b/theme/default/item_display.css
@@ -7,6 +7,7 @@ div.item_displayContent th.prompt
 div#instanceInfo, div#relatedItems
 {
 	float: left;
+	clear: left;
 }
 
 span.sitePluginDescription
